Remove overflow-x property to fix sticky elements

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -4,7 +4,6 @@
 }
 
 .App {
-  overflow-x: hidden;
   margin: 2rem auto 0 auto;
   max-width: 36rem;
   padding: 1rem 1.5rem 1.5rem 1.5rem;
